--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "fast-glob": "^3.2.7",
     "firebase": "^8.9.1",
     "fs-extra": "^10.0.0",
+    "fuse.js": "^6.4.6",
     "gray-matter": "^4.0.3",
     "husky": "4.3.7",
     "jest": "^27.1.1",
